--- a/index.html
+++ b/index.html
@@ -5,8 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CabTube, a videos based website</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    <nav>
+        <nav class="nav-left"></nav>
+        <nav class="nav-middle"></nav>
+        <nav class="nav-right"></nav>
+    </nav>
+
+
+
     
 </body>
 </html>
