--- a/index.html
+++ b/index.html
@@ -10,9 +10,17 @@
 <body>
 
     <nav>
-        <nav class="nav-left"></nav>
+        <nav class="nav-left">
+            <img src="images/menu.png" alt="">
+            <img src="images/logo.png" alt="">
+        </nav>
         <nav class="nav-middle"></nav>
-        <nav class="nav-right"></nav>
+        <nav class="nav-right">
+            <img src="images/upload.png" alt="">
+            <img src="images/more.png" alt="">
+            <img src="images/notification.png" alt="">
+            <img src="images/Jack.png" alt="">
+        </nav>
     </nav>
 
 
