--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <nav>
+    <nav class="flex-div">
         <nav class="nav-left">
             <img src="images/menu.png" alt="">
             <img src="images/logo.png" alt="">
