--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 
     <nav class="flex-div">
         <nav class="nav-left">
-            <img src="images/menu.png" alt="">
-            <img src="images/logo.png" alt="">
+            <img src="images/menu.png" class="menu-icon" alt="">
+            <img src="images/logo.png" class="logo" alt="">
         </nav>
         <nav class="nav-middle"></nav>
-        <nav class="nav-right">
+        <nav class="nav-right flex-div">
             <img src="images/upload.png" alt="">
             <img src="images/more.png" alt="">
             <img src="images/notification.png" alt="">
-            <img src="images/Jack.png" alt="">
+            <img src="images/Jack.png" class="user-icon" alt="">
         </nav>
     </nav>
 
