--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <nav class="flex-div">
-        <nav class="nav-left">
+        <nav class="nav-left flex-div">
             <img src="images/menu.png" class="menu-icon" alt="">
             <img src="images/logo.png" class="logo" alt="">
         </nav>
