--- a/index.html
+++ b/index.html
@@ -14,7 +14,13 @@
             <img src="images/menu.png" class="menu-icon" alt="">
             <img src="images/logo.png" class="logo" alt="">
         </nav>
-        <nav class="nav-middle"></nav>
+        <nav class="nav-middle flex-div">
+            <div class="search-box flex-div">
+                <input type="search" name="" placeholder="Search">
+                <img src="images/search.png" alt="">
+            </div>
+            <img src="images/voice-search.png" class="mic-icon" alt="">
+        </nav>
         <nav class="nav-right flex-div">
             <img src="images/upload.png" alt="">
             <img src="images/more.png" alt="">
