--- a/index.html
+++ b/index.html
@@ -28,8 +28,12 @@
             <img src="images/Jack.png" class="user-icon" alt="">
         </div>
     </nav>
-
-
+    <!-- Sidebar -->
+<div class="sidebar">
+    <div class="shortcut-links">
+        <a href=""><img src="images/home.png" alt=""><p>Home</p></a>
+    </div>
+</div>
 
     
 </body>
