--- a/index.html
+++ b/index.html
@@ -32,6 +32,13 @@
 <div class="sidebar">
     <div class="shortcut-links">
         <a href=""><img src="images/home.png" alt=""><p>Home</p></a>
+        <a href=""><img src="images/explore.png" alt=""><p>Explore</p></a>
+        <a href=""><img src="images/subscriprion.png" alt=""><p>Subscription</p></a>
+        <a href=""><img src="images/library.png" alt=""><p>Library</p></a>
+        <a href=""><img src="images/history.png" alt=""><p>History</p></a>
+        <a href=""><img src="images/playlist.png" alt=""><p>Playlist</p></a>
+        <a href=""><img src="images/messages.png" alt=""><p>Messages</p></a>
+        <a href=""><img src="images/show-more.png" alt=""><p>Show more</p></a>
     </div>
 </div>
 
