--- a/index.html
+++ b/index.html
@@ -41,6 +41,14 @@
         <a href=""><img src="images/show-more.png" alt=""><p>Show more</p></a>
         <hr>
     </div>
+    <div class="subscribed-list">
+        <h3>SUBSCRIBED</h3>
+        <a href=""><img src="images/Jack.png" alt=""><p>Obed Mulumba</p></a>
+        <a href=""><img src="images/simon.png" alt=""><p>Simon Baker</p></a>
+        <a href=""><img src="images/tom.png" alt=""><p>Tom Hardy</p></a>
+        <a href=""><img src="images/megan.png" alt=""><p>Megan Ryan</p></a>
+        <a href=""><img src="images/cameron.png" alt=""><p>Cameron Diaz</p></a>
+    </div>
 </div>
 
     
