--- a/index.html
+++ b/index.html
@@ -51,6 +51,14 @@
     </div>
 </div>
 
+<!-- -------------------MAIN -->
+
+<div class="container">
+    <div class="banner">
+        <img src="images/banner.png" alt="">
+    </div>
+</div>
+
     <script src="script.js"></script>
 </body>
 </html>
