--- a/index.html
+++ b/index.html
@@ -57,6 +57,99 @@
     <div class="banner">
         <img src="images/banner.png" alt="">
     </div>
+    <div class="list-container">
+        <div class="vid-list">
+            <a href=""><img src="images/thumbnail1.png" class="thumbnail" alt=""></a>            
+            <div class="flex-div">
+                <img src="images/Jack.png" alt="">
+                <div class="vid-info">
+                    <a href="">Best channe to learn coding that help you to be a web developer</a>
+                    <p>Easy Tutorials</p>
+                    <p>15k Views 2 days</p>
+                </div>
+            </div>
+        </div>
+        <div class="vid-list">
+            <a href=""><img src="images/thumbnail2.png" class="thumbnail" alt=""></a>            
+            <div class="flex-div">
+                <img src="images/Jack.png" alt="">
+                <div class="vid-info">
+                    <a href="">Best channe to learn coding that help you to be a web developer</a>
+                    <p>Easy Tutorials</p>
+                    <p>15k Views 2 days</p>
+                </div>
+            </div>
+        </div>
+        <div class="vid-list">
+            <a href=""><img src="images/thumbnail3.png" class="thumbnail" alt=""></a>            
+            <div class="flex-div">
+                <img src="images/Jack.png" alt="">
+                <div class="vid-info">
+                    <a href="">Best channe to learn coding that help you to be a web developer</a>
+                    <p>Easy Tutorials</p>
+                    <p>15k Views 2 days</p>
+                </div>
+            </div>
+        </div>
+        <div class="vid-list">
+            <a href=""><img src="images/thumbnail4.png" class="thumbnail" alt=""></a>            
+            <div class="flex-div">
+                <img src="images/Jack.png" alt="">
+                <div class="vid-info">
+                    <a href="">Best channe to learn coding that help you to be a web developer</a>
+                    <p>Easy Tutorials</p>
+                    <p>15k Views 2 days</p>
+                </div>
+            </div>
+        </div>
+        <div class="vid-list">
+            <a href=""><img src="images/thumbnail5.png" class="thumbnail" alt=""></a>            
+            <div class="flex-div">
+                <img src="images/Jack.png" alt="">
+                <div class="vid-info">
+                    <a href="">Best channe to learn coding that help you to be a web developer</a>
+                    <p>Easy Tutorials</p>
+                    <p>15k Views 2 days</p>
+                </div>
+            </div>
+        </div>
+        <div class="vid-list">
+            <a href=""><img src="images/thumbnail6.png" class="thumbnail" alt=""></a>            
+            <div class="flex-div">
+                <img src="images/Jack.png" alt="">
+                <div class="vid-info">
+                    <a href="">Best channe to learn coding that help you to be a web developer</a>
+                    <p>Easy Tutorials</p>
+                    <p>15k Views 2 days</p>
+                </div>
+            </div>
+        </div>
+        <div class="vid-list">
+            <a href=""><img src="images/thumbnail7.png" class="thumbnail" alt=""></a>            
+            <div class="flex-div">
+                <img src="images/Jack.png" alt="">
+                <div class="vid-info">
+                    <a href="">Best channe to learn coding that help you to be a web developer</a>
+                    <p>Easy Tutorials</p>
+                    <p>15k Views 2 days</p>
+                </div>
+            </div>
+        </div>
+        <div class="vid-list">
+            <a href=""><img src="images/thumbnail8.png" class="thumbnail" alt=""></a>            
+            <div class="flex-div">
+                <img src="images/Jack.png" alt="">
+                <div class="vid-info">
+                    <a href="">Best channe to learn coding that help you to be a web developer</a>
+                    <p>Easy Tutorials</p>
+                    <p>15k Views 2 days</p>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
+
 </div>
 
     <script src="script.js"></script>
