--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <div class="vid-info">
                     <a href="">Best channe to learn coding that help you to be a web developer</a>
                     <p>Easy Tutorials</p>
-                    <p>15k Views 2 days</p>
+                    <p>15k Views &bull; 2 days</p>
                 </div>
             </div>
         </div>
@@ -76,7 +76,7 @@
                 <div class="vid-info">
                     <a href="">Best channe to learn coding that help you to be a web developer</a>
                     <p>Easy Tutorials</p>
-                    <p>15k Views 2 days</p>
+                     <p>15k Views &bull; 2 days</p>
                 </div>
             </div>
         </div>
@@ -87,7 +87,7 @@
                 <div class="vid-info">
                     <a href="">Best channe to learn coding that help you to be a web developer</a>
                     <p>Easy Tutorials</p>
-                    <p>15k Views 2 days</p>
+                     <p>15k Views &bull; 2 days</p>
                 </div>
             </div>
         </div>
@@ -98,7 +98,7 @@
                 <div class="vid-info">
                     <a href="">Best channe to learn coding that help you to be a web developer</a>
                     <p>Easy Tutorials</p>
-                    <p>15k Views 2 days</p>
+                     <p>15k Views &bull; 2 days</p>
                 </div>
             </div>
         </div>
@@ -109,7 +109,7 @@
                 <div class="vid-info">
                     <a href="">Best channe to learn coding that help you to be a web developer</a>
                     <p>Easy Tutorials</p>
-                    <p>15k Views 2 days</p>
+                     <p>15k Views &bull; 2 days</p>
                 </div>
             </div>
         </div>
@@ -120,7 +120,7 @@
                 <div class="vid-info">
                     <a href="">Best channe to learn coding that help you to be a web developer</a>
                     <p>Easy Tutorials</p>
-                    <p>15k Views 2 days</p>
+                     <p>15k Views &bull; 2 days</p>
                 </div>
             </div>
         </div>
@@ -131,7 +131,7 @@
                 <div class="vid-info">
                     <a href="">Best channe to learn coding that help you to be a web developer</a>
                     <p>Easy Tutorials</p>
-                    <p>15k Views 2 days</p>
+                     <p>15k Views &bull; 2 days</p>
                 </div>
             </div>
         </div>
@@ -142,7 +142,7 @@
                 <div class="vid-info">
                     <a href="">Best channe to learn coding that help you to be a web developer</a>
                     <p>Easy Tutorials</p>
-                    <p>15k Views 2 days</p>
+                     <p>15k Views &bull; 2 days</p>
                 </div>
             </div>
         </div>
