--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
     </div>
     <div class="list-container">
         <div class="vid-list">
-            <a href=""><img src="images/thumbnail1.png" class="thumbnail" alt=""></a>            
+            <a href="play-video.html"><img src="images/thumbnail1.png" class="thumbnail" alt=""></a>            
             <div class="flex-div">
                 <img src="images/Jack.png" alt="">
                 <div class="vid-info">
-                    <a href="">Best channe to learn coding that help you to be a web developer</a>
+                    <a href="play-video.html">Best channe to learn coding that help you to be a web developer</a>
                     <p>Easy Tutorials</p>
                     <p>15k Views &bull; 2 days</p>
                 </div>
