--- a/play-video.html
+++ b/play-video.html
@@ -8,6 +8,27 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <nav class="flex-div">
+        <div class="nav-left flex-div">
+            <img src="images/menu.png" class="menu-icon" alt="">
+            <img src="images/logo.png" class="logo" alt="">
+        </div>
+        <div class="nav-middle flex-div">
+            <div class="search-box flex-div">
+                <input type="search" name="" placeholder="Search">
+                <img src="images/search.png" alt="">
+            </div>
+            <img src="images/voice-search.png" class="mic-icon" alt="">
+        </div>
+        <div class="nav-right flex-div">
+            <img src="images/upload.png" alt="">
+            <img src="images/more.png" alt="">
+            <img src="images/notification.png" alt="">
+            <img src="images/Jack.png" class="user-icon" alt="">
+        </div>
+    </nav>
+
+
     
 </body>
 </html>
