--- a/play-video.html
+++ b/play-video.html
@@ -28,7 +28,20 @@
         </div>
     </nav>
 
-
+<div class="container play-container">
+    <div class="dow">
+        <div class="play-video">
+            <video controls autoplay>
+                <source src="images/video.mp4" type="video/mp4">
+            </video>
+        </div>
+        <div class="right-sidebar"></div>
+    </div>
+</div>
     
+
+
+
+
 </body>
 </html>
