fixed ro bug and styling video autoplay

--- a/play-video.html
+++ b/play-video.html
@@ -29,7 +29,7 @@
     </nav>
 
 <div class="container play-container">
-    <div class="dow">
+    <div class="row">
         <div class="play-video">
             <video controls autoplay>
                 <source src="images/video.mp4" type="video/mp4">
