--- a/play-video.html
+++ b/play-video.html
@@ -35,7 +35,19 @@
                 <source src="images/video.mp4" type="video/mp4">
             </video>
         </div>
-        <div class="right-sidebar"></div>
+        <div class="right-sidebar">
+
+            <div class="side-video-list">
+                <a href=""><img src="images/thumbnail1.png" alt=""></a>
+                <div class="vid-info">
+                    <a href="">Best channel that help you to be a web developer</a>
+                    <p>Easy Tutorials</p>
+                    <p>15k Views</p>
+                </div>
+            </div>
+
+
+        </div>
     </div>
 </div>
     
