put  other images video to the right

--- a/play-video.html
+++ b/play-video.html
@@ -38,7 +38,7 @@
         <div class="right-sidebar">
 
             <div class="side-video-list">
-                <a href=""><img src="images/thumbnail1.png" alt=""></a>
+                <a href="" class="small-thumbnail"><img src="images/thumbnail1.png" alt=""></a>
                 <div class="vid-info">
                     <a href="">Best channel that help you to be a web developer</a>
                     <p>Easy Tutorials</p>
