added many video to right sidebar

--- a/play-video.html
+++ b/play-video.html
@@ -45,6 +45,70 @@
                     <p>15k Views</p>
                 </div>
             </div>
+            <div class="side-video-list">
+                <a href="" class="small-thumbnail"><img src="images/thumbnail2.png" alt=""></a>
+                <div class="vid-info">
+                    <a href="">Best channel that help you to be a web developer</a>
+                    <p>Easy Tutorials</p>
+                    <p>15k Views</p>
+                </div>
+            </div>
+            <div class="side-video-list">
+                <a href="" class="small-thumbnail"><img src="images/thumbnail3.png" alt=""></a>
+                <div class="vid-info">
+                    <a href="">Best channel that help you to be a web developer</a>
+                    <p>Easy Tutorials</p>
+                    <p>15k Views</p>
+                </div>
+            </div>
+            <div class="side-video-list">
+                <a href="" class="small-thumbnail"><img src="images/thumbnail4.png" alt=""></a>
+                <div class="vid-info">
+                    <a href="">Best channel that help you to be a web developer</a>
+                    <p>Easy Tutorials</p>
+                    <p>15k Views</p>
+                </div>
+            </div>
+            <div class="side-video-list">
+                <a href="" class="small-thumbnail"><img src="images/thumbnail5.png" alt=""></a>
+                <div class="vid-info">
+                    <a href="">Best channel that help you to be a web developer</a>
+                    <p>Easy Tutorials</p>
+                    <p>15k Views</p>
+                </div>
+            </div>
+            <div class="side-video-list">
+                <a href="" class="small-thumbnail"><img src="images/thumbnail6.png" alt=""></a>
+                <div class="vid-info">
+                    <a href="">Best channel that help you to be a web developer</a>
+                    <p>Easy Tutorials</p>
+                    <p>15k Views</p>
+                </div>
+            </div>
+            <div class="side-video-list">
+                <a href="" class="small-thumbnail"><img src="images/thumbnail7.png" alt=""></a>
+                <div class="vid-info">
+                    <a href="">Best channel that help you to be a web developer</a>
+                    <p>Easy Tutorials</p>
+                    <p>15k Views</p>
+                </div>
+            </div>
+            <div class="side-video-list">
+                <a href="" class="small-thumbnail"><img src="images/thumbnail8.png" alt=""></a>
+                <div class="vid-info">
+                    <a href="">Best channel that help you to be a web developer</a>
+                    <p>Easy Tutorials</p>
+                    <p>15k Views</p>
+                </div>
+            </div>
+            <div class="side-video-list">
+                <a href="" class="small-thumbnail"><img src="images/thumbnail9.png" alt=""></a>
+                <div class="vid-info">
+                    <a href="">Best channel that help you to be a web developer</a>
+                    <p>Easy Tutorials</p>
+                    <p>15k Views</p>
+                </div>
+            </div>
 
 
         </div>
