--- a/play-video.html
+++ b/play-video.html
@@ -34,6 +34,17 @@
             <video controls autoplay>
                 <source src="images/video.mp4" type="video/mp4">
             </video>
+            <div class="tags">
+                <a href="">#Coding</a>
+                <a href="">#HTML</a>
+                <a href="">#CSS</a>
+                <a href="">#JAVASCRIPT</a>
+            </div>
+
+
+
+
+
         </div>
         <div class="right-sidebar">
 
