--- a/play-video.html
+++ b/play-video.html
@@ -35,11 +35,9 @@
                 <source src="images/video.mp4" type="video/mp4">
             </video>
             <div class="tags">
-                <a href="">#Coding</a>
-                <a href="">#HTML</a>
-                <a href="">#CSS</a>
-                <a href="">#JAVASCRIPT</a>
+                <a href="">#Coding</a> <a href="">#HTML</a> <a href="">#CSS</a><a href="">#JAVASCRIPT</a>
             </div>
+            
 
 
 
