Added sharing buttons

--- a/play-video.html
+++ b/play-video.html
@@ -38,6 +38,17 @@
                 <a href="">#Coding</a> <a href="">#HTML</a> <a href="">#CSS</a><a href="">#JAVASCRIPT</a>
             </div>
             <h3>Best YouTube hannel To Learn Web Development</h3>
+            <div class="play-video-info">
+                <p>1225 Views &bull; 2 days ago</p>
+                <div>
+                    <a href=""><img src="images/like.png" alt="">125</a>
+                    <a href=""><img src="images/dislike.png" alt="">2</a>
+                    <a href=""><img src="images/share.png" alt="">Share</a>
+                    <a href=""><img src="images/save.png" alt="">Save</a>
+
+
+                </div>
+            </div>
 
 
 
