--- a/play-video.html
+++ b/play-video.html
@@ -45,9 +45,16 @@
                     <a href=""><img src="images/dislike.png" alt="">2</a>
                     <a href=""><img src="images/share.png" alt="">Share</a>
                     <a href=""><img src="images/save.png" alt="">Save</a>
-
-
                 </div>
+            </div>
+            <hr>
+            <div class="publisher">
+                <img src="images/Jack.png" alt="">
+                <div>
+                    <p>Easy Tutorials</p>
+                    <span>500k Subscribers</span>
+                </div>
+                <button type="button">Subscribe</button>
             </div>
 
 
