Adding comments title

--- a/play-video.html
+++ b/play-video.html
@@ -56,6 +56,12 @@
                 </div>
                 <button type="button">Subscribe</button>
             </div>
+            <div class="vid-description">
+                <p>Channel that makes learning easy</p>
+                <p>Subscribe Easy Tutorials to atch tutorils on web development</p>
+                <hr>
+                <h4>134 Comments</h4>
+            </div>
 
 
 
