Added write comment input

--- a/play-video.html
+++ b/play-video.html
@@ -37,7 +37,7 @@
             <div class="tags">
                 <a href="">#Coding</a> <a href="">#HTML</a> <a href="">#CSS</a><a href="">#JAVASCRIPT</a>
             </div>
-            <h3>Best YouTube hannel To Learn Web Development</h3>
+            <h3>Best YouTube channel To Learn Web Development</h3>
             <div class="play-video-info">
                 <p>1225 Views &bull; 2 days ago</p>
                 <div>
@@ -61,6 +61,12 @@
                 <p>Subscribe Easy Tutorials to atch tutorils on web development</p>
                 <hr>
                 <h4>134 Comments</h4>
+
+                <div class="add-comment">
+                    <img src="images/Jack.png" alt="">
+                    <input type="text" placeholder="write comments...">
+                </div>
+
             </div>
 
 
