--- a/play-video.html
+++ b/play-video.html
@@ -64,7 +64,7 @@
 
                 <div class="add-comment">
                     <img src="images/Jack.png" alt="">
-                    <input type="text" placeholder="write comments...">
+                    <input type="text" placeholder="Write comments...">
                 </div>
 
             </div>
