Add old comment

--- a/play-video.html
+++ b/play-video.html
@@ -66,6 +66,13 @@
                     <img src="images/Jack.png" alt="">
                     <input type="text" placeholder="Write comments...">
                 </div>
+                <div class="old-comment">
+                    <img src="images/Jack.png" alt="">
+                    <div>
+                        <h3>Obed Mulumba <span>2 days ago</span></h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi ullam provident officiis earum cupiditate hic aspernatur quod enim labore modi, consectetur mollitia fuga nulla in impedit natus alias iusto nemo!</p>
+                    </div>
+                </div>
 
             </div>
 
