Designing All replays

--- a/play-video.html
+++ b/play-video.html
@@ -71,6 +71,14 @@
                     <div>
                         <h3>Obed Mulumba <span>2 days ago</span></h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi ullam provident officiis earum cupiditate hic aspernatur quod enim labore modi, consectetur mollitia fuga nulla in impedit natus alias iusto nemo!</p>
+                        <div class="acomment-action">
+                            <img src="images/like.png" alt="">
+                            <span>244</span>
+                            <img src="images/dislike.png" alt="">
+                            <span>2</span>
+                            <span>REPLY</span>
+                            <a href="">All Replies</a>
+                        </div>
                     </div>
                 </div>
 
