Finished html version

--- a/play-video.html
+++ b/play-video.html
@@ -11,7 +11,7 @@
     <nav class="flex-div">
         <div class="nav-left flex-div">
             <img src="images/menu.png" class="menu-icon" alt="">
-            <img src="images/logo.png" class="logo" alt="">
+            <a href="index.html"><img src="images/logo.png" class="logo" alt=""></a>
         </div>
         <div class="nav-middle flex-div">
             <div class="search-box flex-div">
@@ -85,7 +85,7 @@
                     <img src="images/Jack.png" alt="">
                     <div>
                         <h3>Obed Mulumba <span>2 days ago</span></h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi ullam provident officiis earum cupiditate hic aspernatur quod enim labore modi, consectetur mollitia fuga nulla in impedit natus alias iusto nemo!</p>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque corrupti quidem voluptas. Quidem accusantium libero deserunt tempore voluptate nulla a! Maxime suscipit iure neque consectetur dolorum iusto facilis saepe dolores.</p>
                         <div class="acomment-action">
                             <img src="images/like.png" alt="">
                             <span>244</span>
