changed somes photos

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
     <!-- Sidebar -->
 <div class="sidebar">
     <div class="shortcut-links">
-        <a href=""><img src="images/home.png" alt=""><p>Home</p></a>
-        <a href=""><img src="images/explore.png" alt=""><p>Explore</p></a>
+        <a href=""><img src="images/home.png" alt=""><p>Accueil</p></a>
+        <a href=""><img src="images/explore.png" alt=""><p>Parcourir</p></a>
         <a href=""><img src="images/subscriprion.png" alt=""><p>Subscription</p></a>
         <a href=""><img src="images/library.png" alt=""><p>Library</p></a>
         <a href=""><img src="images/history.png" alt=""><p>History</p></a>
@@ -59,46 +59,46 @@
     </div>
     <div class="list-container">
         <div class="vid-list">
-            <a href="play-video.html"><img src="images/thumbnail1.png" class="thumbnail" alt=""></a>            
+            <a href="play-video.html"><img src="images/thumbnail1.jpg" class="thumbnail" alt=""></a>            
             <div class="flex-div">
-                <img src="images/Jack.png" alt="">
+                <img src="images/jft.jpg" alt="">
                 <div class="vid-info">
-                    <a href="play-video.html">Best channe to learn coding that help you to be a web developer</a>
-                    <p>Easy Tutorials</p>
-                    <p>15k Views &bull; 2 days</p>
+                    <a href="play-video.html">Le Role de l'éducation dans la transformation digitale</a>
+                    <p><strong>La Porte Des Cieux</strong></p>
+                    <p>2G Vues &bull; 2 Jours</p>
                 </div>
             </div>
         </div>
         <div class="vid-list">
-            <a href=""><img src="images/thumbnail2.png" class="thumbnail" alt=""></a>            
+            <a href=""><img src="images/thumbnail2.jpg" class="thumbnail" alt="" style="border:1px solid #dcdcdc;"></a>            
             <div class="flex-div">
                 <img src="images/Jack.png" alt="">
                 <div class="vid-info">
                     <a href="">Best channe to learn coding that help you to be a web developer</a>
                     <p>Easy Tutorials</p>
-                     <p>15k Views &bull; 2 days</p>
+                     <p>15k Views &bull; 2 jours</p>
                 </div>
             </div>
         </div>
         <div class="vid-list">
-            <a href=""><img src="images/thumbnail3.png" class="thumbnail" alt=""></a>            
+            <a href=""><img src="images/thumbnail3.jpg" class="thumbnail" alt=""></a>            
             <div class="flex-div">
-                <img src="images/Jack.png" alt="">
+                <img src="images/mmbiye.jpeg" alt="">
                 <div class="vid-info">
                     <a href="">Best channe to learn coding that help you to be a web developer</a>
-                    <p>Easy Tutorials</p>
-                     <p>15k Views &bull; 2 days</p>
+                    <p><strong>Moïse Mbiye Officiel</strong></p>
+                     <p>15k Vues &bull; 2 jours</p>
                 </div>
             </div>
         </div>
         <div class="vid-list">
-            <a href=""><img src="images/thumbnail4.png" class="thumbnail" alt=""></a>            
+            <a href=""><img src="images/thumbnail4.jpg" class="thumbnail" alt=""></a>            
             <div class="flex-div">
                 <img src="images/Jack.png" alt="">
                 <div class="vid-info">
                     <a href="">Best channe to learn coding that help you to be a web developer</a>
-                    <p>Easy Tutorials</p>
-                     <p>15k Views &bull; 2 days</p>
+                    <p><strong>Moïse Mbiye Officiel</strong></p>
+                     <p>15k Views &bull; 2 jours</p>
                 </div>
             </div>
         </div>
@@ -109,7 +109,7 @@
                 <div class="vid-info">
                     <a href="">Best channe to learn coding that help you to be a web developer</a>
                     <p>Easy Tutorials</p>
-                     <p>15k Views &bull; 2 days</p>
+                     <p>15k Views &bull; 2 jours</p>
                 </div>
             </div>
         </div>
@@ -120,7 +120,7 @@
                 <div class="vid-info">
                     <a href="">Best channe to learn coding that help you to be a web developer</a>
                     <p>Easy Tutorials</p>
-                     <p>15k Views &bull; 2 days</p>
+                     <p>15k Views &bull; 2 jours</p>
                 </div>
             </div>
         </div>
@@ -131,7 +131,7 @@
                 <div class="vid-info">
                     <a href="">Best channe to learn coding that help you to be a web developer</a>
                     <p>Easy Tutorials</p>
-                     <p>15k Views &bull; 2 days</p>
+                     <p>15k Views &bull; 2 jours</p>
                 </div>
             </div>
         </div>
@@ -142,7 +142,7 @@
                 <div class="vid-info">
                     <a href="">Best channe to learn coding that help you to be a web developer</a>
                     <p>Easy Tutorials</p>
-                     <p>15k Views &bull; 2 days</p>
+                     <p>15k Views &bull; 2 jours</p>
                 </div>
             </div>
         </div>
