--- a/play-video.html
+++ b/play-video.html
@@ -107,7 +107,7 @@
         <div class="right-sidebar">
 
             <div class="side-video-list">
-                <a href="" class="small-thumbnail"><img src="images/thumbnail1.png" alt=""></a>
+                <a href="" class="small-thumbnail"><img src="images/thumbnail1.jpg" alt=""></a>
                 <div class="vid-info">
                     <a href="">Best channel that help you to be a web developer</a>
                     <p>Easy Tutorials</p>
@@ -115,7 +115,7 @@
                 </div>
             </div>
             <div class="side-video-list">
-                <a href="" class="small-thumbnail"><img src="images/thumbnail2.png" alt=""></a>
+                <a href="" class="small-thumbnail"><img src="images/thumbnail2.jpg" alt=""></a>
                 <div class="vid-info">
                     <a href="">Best channel that help you to be a web developer</a>
                     <p>Easy Tutorials</p>
@@ -123,7 +123,7 @@
                 </div>
             </div>
             <div class="side-video-list">
-                <a href="" class="small-thumbnail"><img src="images/thumbnail3.png" alt=""></a>
+                <a href="" class="small-thumbnail"><img src="images/thumbnail3.jpg" alt=""></a>
                 <div class="vid-info">
                     <a href="">Best channel that help you to be a web developer</a>
                     <p>Easy Tutorials</p>
@@ -131,7 +131,7 @@
                 </div>
             </div>
             <div class="side-video-list">
-                <a href="" class="small-thumbnail"><img src="images/thumbnail4.png" alt=""></a>
+                <a href="" class="small-thumbnail"><img src="images/thumbnail4.jpg" alt=""></a>
                 <div class="vid-info">
                     <a href="">Best channel that help you to be a web developer</a>
                     <p>Easy Tutorials</p>
