--- a/play-video.html
+++ b/play-video.html
@@ -109,9 +109,9 @@
             <div class="side-video-list">
                 <a href="" class="small-thumbnail"><img src="images/thumbnail1.jpg" alt=""></a>
                 <div class="vid-info">
-                    <a href="">Best channel that help you to be a web developer</a>
-                    <p>Easy Tutorials</p>
-                    <p>15k Views</p>
+                    <a href="">Le Role de l'éducation dans la transformation digitale</a>
+                    <p><strong>La porte Dec Cieux</strong></p>
+                    <p>2G Vues &bull; 2 Jours</p>
                 </div>
             </div>
             <div class="side-video-list">
