--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
             <div class="flex-div">
                 <img src="images/Jack.png" alt="">
                 <div class="vid-info">
-                    <a href="">Best channe to learn coding that help you to be a web developer</a>
-                    <p>Easy Tutorials</p>
-                     <p>15k Views &bull; 2 jours</p>
+                    <a href="">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur.</a>
+                    <p>Fally IPUPA Officiel</p>
+                     <p>15k Vues &bull; 2 jours</p>
                 </div>
             </div>
         </div>
@@ -85,7 +85,7 @@
             <div class="flex-div">
                 <img src="images/mmbiye.jpeg" alt="">
                 <div class="vid-info">
-                    <a href="">Best channe to learn coding that help you to be a web developer</a>
+                    <a href="">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur.</a>
                     <p><strong>Moïse Mbiye Officiel</strong></p>
                      <p>15k Vues &bull; 2 jours</p>
                 </div>
@@ -96,9 +96,9 @@
             <div class="flex-div">
                 <img src="images/Jack.png" alt="">
                 <div class="vid-info">
-                    <a href="">Best channe to learn coding that help you to be a web developer</a>
+                    <a href="">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur.</a>
                     <p><strong>Moïse Mbiye Officiel</strong></p>
-                     <p>15k Views &bull; 2 jours</p>
+                     <p>15k Vues &bull; 2 jours</p>
                 </div>
             </div>
         </div>
@@ -107,9 +107,9 @@
             <div class="flex-div">
                 <img src="images/Jack.png" alt="">
                 <div class="vid-info">
-                    <a href="">Best channe to learn coding that help you to be a web developer</a>
-                    <p>Easy Tutorials</p>
-                     <p>15k Views &bull; 2 jours</p>
+                    <a href="">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur.</a>
+                    <p>OMM Developpement</p>
+                     <p>15k Vues &bull; 2 jours</p>
                 </div>
             </div>
         </div>
@@ -118,9 +118,9 @@
             <div class="flex-div">
                 <img src="images/Jack.png" alt="">
                 <div class="vid-info">
-                    <a href="">Best channe to learn coding that help you to be a web developer</a>
-                    <p>Easy Tutorials</p>
-                     <p>15k Views &bull; 2 jours</p>
+                    <a href="">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur.</a>
+                    <p>OMM Developpement</p>
+                     <p>15k Vues &bull; 2 jours</p>
                 </div>
             </div>
         </div>
@@ -129,9 +129,9 @@
             <div class="flex-div">
                 <img src="images/Jack.png" alt="">
                 <div class="vid-info">
-                    <a href="">Best channe to learn coding that help you to be a web developer</a>
-                    <p>Easy Tutorials</p>
-                     <p>15k Views &bull; 2 jours</p>
+                    <a href="">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur.</a>
+                    <p>OMM Developpement</p>
+                     <p>15k Vues &bull; 2 jours</p>
                 </div>
             </div>
         </div>
@@ -140,9 +140,9 @@
             <div class="flex-div">
                 <img src="images/Jack.png" alt="">
                 <div class="vid-info">
-                    <a href="">Best channe to learn coding that help you to be a web developer</a>
-                    <p>Easy Tutorials</p>
-                     <p>15k Views &bull; 2 jours</p>
+                    <a href="">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur.</a>
+                    <p>OMM Developpement</p>
+                     <p>15k Vues &bull; 2 jours</p>
                 </div>
             </div>
         </div>
