--- a/play-video.html
+++ b/play-video.html
@@ -117,7 +117,7 @@
             <div class="side-video-list">
                 <a href="" class="small-thumbnail"><img src="images/thumbnail2.jpg" alt=""></a>
                 <div class="vid-info">
-                    <a href="">Best channel that help you to be a web developer</a>
+                    <a href="">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur.</a>
                     <p>Easy Tutorials</p>
                     <p>15k Views</p>
                 </div>
@@ -125,7 +125,7 @@
             <div class="side-video-list">
                 <a href="" class="small-thumbnail"><img src="images/thumbnail3.jpg" alt=""></a>
                 <div class="vid-info">
-                    <a href="">Best channel that help you to be a web developer</a>
+                    <a href="">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur.</a>
                     <p>Easy Tutorials</p>
                     <p>15k Views</p>
                 </div>
@@ -133,7 +133,7 @@
             <div class="side-video-list">
                 <a href="" class="small-thumbnail"><img src="images/thumbnail4.jpg" alt=""></a>
                 <div class="vid-info">
-                    <a href="">Best channel that help you to be a web developer</a>
+                    <a href="">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur.</a>
                     <p>Easy Tutorials</p>
                     <p>15k Views</p>
                 </div>
@@ -141,7 +141,7 @@
             <div class="side-video-list">
                 <a href="" class="small-thumbnail"><img src="images/thumbnail5.png" alt=""></a>
                 <div class="vid-info">
-                    <a href="">Best channel that help you to be a web developer</a>
+                    <a href="">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur.</a>
                     <p>Easy Tutorials</p>
                     <p>15k Views</p>
                 </div>
@@ -149,7 +149,7 @@
             <div class="side-video-list">
                 <a href="" class="small-thumbnail"><img src="images/thumbnail6.png" alt=""></a>
                 <div class="vid-info">
-                    <a href="">Best channel that help you to be a web developer</a>
+                    <a href="">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur.</a>
                     <p>Easy Tutorials</p>
                     <p>15k Views</p>
                 </div>
@@ -157,7 +157,7 @@
             <div class="side-video-list">
                 <a href="" class="small-thumbnail"><img src="images/thumbnail7.png" alt=""></a>
                 <div class="vid-info">
-                    <a href="">Best channel that help you to be a web developer</a>
+                    <a href="">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur.</a>
                     <p>Easy Tutorials</p>
                     <p>15k Views</p>
                 </div>
@@ -165,7 +165,7 @@
             <div class="side-video-list">
                 <a href="" class="small-thumbnail"><img src="images/thumbnail8.png" alt=""></a>
                 <div class="vid-info">
-                    <a href="">Best channel that help you to be a web developer</a>
+                    <a href="">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur.</a>
                     <p>Easy Tutorials</p>
                     <p>15k Views</p>
                 </div>
@@ -173,7 +173,7 @@
             <div class="side-video-list">
                 <a href="" class="small-thumbnail"><img src="images/thumbnail9.png" alt=""></a>
                 <div class="vid-info">
-                    <a href="">Best channel that help you to be a web developer</a>
+                    <a href="">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur.</a>
                     <p>Easy Tutorials</p>
                     <p>15k Views</p>
                 </div>
