--- a/play-video.html
+++ b/play-video.html
@@ -39,7 +39,7 @@
             </div>
             <h3>Best YouTube channel To Learn Web Development</h3>
             <div class="play-video-info">
-                <p>1225 Views &bull; 2 days ago</p>
+                <p>1225 Vues &bull; 2 days ago</p>
                 <div>
                     <a href=""><img src="images/like.png" alt="">125</a>
                     <a href=""><img src="images/dislike.png" alt="">2</a>
@@ -51,14 +51,14 @@
             <div class="publisher">
                 <img src="images/Jack.png" alt="">
                 <div>
-                    <p>Easy Tutorials</p>
+                    <p>OMM Development</p>
                     <span>500k Subscribers</span>
                 </div>
                 <button type="button">Subscribe</button>
             </div>
             <div class="vid-description">
                 <p>Channel that makes learning easy</p>
-                <p>Subscribe Easy Tutorials to atch tutorils on web development</p>
+                <p>Subscribe OMM Development to atch tutorils on web development</p>
                 <hr>
                 <h4>134 Comments</h4>
 
@@ -118,64 +118,64 @@
                 <a href="" class="small-thumbnail"><img src="images/thumbnail2.jpg" alt=""></a>
                 <div class="vid-info">
                     <a href="">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur.</a>
-                    <p>Easy Tutorials</p>
-                    <p>15k Views</p>
+                    <p>OMM Development</p>
+                    <p>15k Vues</p>
                 </div>
             </div>
             <div class="side-video-list">
                 <a href="" class="small-thumbnail"><img src="images/thumbnail3.jpg" alt=""></a>
                 <div class="vid-info">
                     <a href="">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur.</a>
-                    <p>Easy Tutorials</p>
-                    <p>15k Views</p>
+                    <p>OMM Development</p>
+                    <p>15k Vues</p>
                 </div>
             </div>
             <div class="side-video-list">
                 <a href="" class="small-thumbnail"><img src="images/thumbnail4.jpg" alt=""></a>
                 <div class="vid-info">
                     <a href="">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur.</a>
-                    <p>Easy Tutorials</p>
-                    <p>15k Views</p>
+                    <p>OMM Development</p>
+                    <p>15k Vues</p>
                 </div>
             </div>
             <div class="side-video-list">
                 <a href="" class="small-thumbnail"><img src="images/thumbnail5.png" alt=""></a>
                 <div class="vid-info">
                     <a href="">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur.</a>
-                    <p>Easy Tutorials</p>
-                    <p>15k Views</p>
+                    <p>OMM Development</p>
+                    <p>15k Vues</p>
                 </div>
             </div>
             <div class="side-video-list">
                 <a href="" class="small-thumbnail"><img src="images/thumbnail6.png" alt=""></a>
                 <div class="vid-info">
                     <a href="">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur.</a>
-                    <p>Easy Tutorials</p>
-                    <p>15k Views</p>
+                    <p>OMM Development</p>
+                    <p>15k Vues</p>
                 </div>
             </div>
             <div class="side-video-list">
                 <a href="" class="small-thumbnail"><img src="images/thumbnail7.png" alt=""></a>
                 <div class="vid-info">
                     <a href="">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur.</a>
-                    <p>Easy Tutorials</p>
-                    <p>15k Views</p>
+                    <p>OMM Development</p>
+                    <p>15k Vues</p>
                 </div>
             </div>
             <div class="side-video-list">
                 <a href="" class="small-thumbnail"><img src="images/thumbnail8.png" alt=""></a>
                 <div class="vid-info">
                     <a href="">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur.</a>
-                    <p>Easy Tutorials</p>
-                    <p>15k Views</p>
+                    <p>OMM Development</p>
+                    <p>15k Vues</p>
                 </div>
             </div>
             <div class="side-video-list">
                 <a href="" class="small-thumbnail"><img src="images/thumbnail9.png" alt=""></a>
                 <div class="vid-info">
                     <a href="">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur.</a>
-                    <p>Easy Tutorials</p>
-                    <p>15k Views</p>
+                    <p>OMM Development</p>
+                    <p>15k Vues</p>
                 </div>
             </div>
 
