--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 <img src="images/Jack.png" alt="">
                 <div class="vid-info">
                     <a href="">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur.</a>
-                    <p>OMM Developpement</p>
+                    <p>OMM Development</p>
                      <p>15k Vues &bull; 2 jours</p>
                 </div>
             </div>
@@ -119,7 +119,7 @@
                 <img src="images/Jack.png" alt="">
                 <div class="vid-info">
                     <a href="">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur.</a>
-                    <p>OMM Developpement</p>
+                    <p>OMM Development</p>
                      <p>15k Vues &bull; 2 jours</p>
                 </div>
             </div>
@@ -130,7 +130,7 @@
                 <img src="images/Jack.png" alt="">
                 <div class="vid-info">
                     <a href="">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur.</a>
-                    <p>OMM Developpement</p>
+                    <p>OMM Development</p>
                      <p>15k Vues &bull; 2 jours</p>
                 </div>
             </div>
@@ -141,7 +141,7 @@
                 <img src="images/Jack.png" alt="">
                 <div class="vid-info">
                     <a href="">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur.</a>
-                    <p>OMM Developpement</p>
+                    <p>OMM Development</p>
                      <p>15k Vues &bull; 2 jours</p>
                 </div>
             </div>
