--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
     <div class="shortcut-links">
         <a href=""><img src="images/home.png" alt=""><p>Accueil</p></a>
         <a href=""><img src="images/explore.png" alt=""><p>Parcourir</p></a>
-        <a href=""><img src="images/subscriprion.png" alt=""><p>Subscription</p></a>
-        <a href=""><img src="images/library.png" alt=""><p>Library</p></a>
-        <a href=""><img src="images/history.png" alt=""><p>History</p></a>
-        <a href=""><img src="images/playlist.png" alt=""><p>Playlist</p></a>
+        <a href=""><img src="images/subscriprion.png" alt=""><p>Abonnement</p></a>
+        <a href=""><img src="images/library.png" alt=""><p>Bibliothèque</p></a>
+        <a href=""><img src="images/history.png" alt=""><p>Historique</p></a>
+        <a href=""><img src="images/playlist.png" alt=""><p>A lire</p></a>
         <a href=""><img src="images/messages.png" alt=""><p>Messages</p></a>
-        <a href=""><img src="images/show-more.png" alt=""><p>Show more</p></a>
+        <a href=""><img src="images/show-more.png" alt=""><p>Affichher détails</p></a>
         <hr>
     </div>
     <div class="subscribed-list">
