--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <a href=""><img src="images/history.png" alt=""><p>Historique</p></a>
         <a href=""><img src="images/playlist.png" alt=""><p>A lire</p></a>
         <a href=""><img src="images/messages.png" alt=""><p>Messages</p></a>
-        <a href=""><img src="images/show-more.png" alt=""><p>Affichher détails</p></a>
+        <a href=""><img src="images/show-more.png" alt=""><p>Afficher détails</p></a>
         <hr>
     </div>
     <div class="subscribed-list">
