--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <hr>
     </div>
     <div class="subscribed-list">
-        <h3>SUBSCRIBED</h3>
+        <h3>Mes chaînes</h3>
         <a href=""><img src="images/Jack.png" alt=""><p>Obed Mulumba</p></a>
         <a href=""><img src="images/simon.png" alt=""><p>Simon Baker</p></a>
         <a href=""><img src="images/tom.png" alt=""><p>Tom Hardy</p></a>
