--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
     <div class="subscribed-list">
         <h3>Mes chaînes</h3>
         <a href=""><img src="images/Jack.png" alt=""><p>Obed Mulumba</p></a>
-        <a href=""><img src="images/simon.png" alt=""><p>Simon Baker</p></a>
-        <a href=""><img src="images/tom.png" alt=""><p>Tom Hardy</p></a>
-        <a href=""><img src="images/megan.png" alt=""><p>Megan Ryan</p></a>
-        <a href=""><img src="images/cameron.png" alt=""><p>Cameron Diaz</p></a>
+        <a href=""><img src="images/simon.png" alt=""><p>Cleverprogra...</p></a>
+        <a href=""><img src="images/tom.png" alt=""><p>Sonny Sangha</p></a>
+        <a href=""><img src="images/megan.png" alt=""><p>Nord Coders</p></a>
+        <a href=""><img src="images/cameron.png" alt=""><p>Grafik'art</p></a>
     </div>
 </div>
 
